<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titulo"
        android:textColor="@color/titulo"
        android:layout_marginTop="30dp"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/criarCadastro"
        android:textColor="@color/textoEscuro"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_Nome"
        android:layout_width="306dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nome"
        android:layout_gravity="center"
        android:textColorHint="@color/textoHint"
        android:textColor="@color/detalheLaranja"
        android:padding="12dp"
        android:inputType="text"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:id="@+id/txt_Email"
        android:layout_width="306dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:layout_gravity="center"
        android:textColorHint="@color/textoHint"
        android:textColor="@color/detalheLaranja"
        android:padding="12dp"
        android:inputType="text"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:id="@+id/txt_Login"
        android:layout_width="306dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/login"
        android:layout_gravity="center"
        android:textColorHint="@color/textoHint"
        android:textColor="@color/detalheLaranja"
        android:padding="12dp"
        android:inputType="text"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:id="@+id/txt_Senha"
        android:layout_width="306dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/senha"
        android:layout_gravity="center"
        android:textColorHint="@color/textoHint"
        android:textColor="@color/detalheLaranja"
        android:padding="12dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:text="@string/cancelar"
            android:textColor="@color/detalheLaranja"
            android:background="@drawable/botao_branco"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_criarConta"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="36dp"
            android:background="@drawable/botao_laranja"
            android:text="@string/criarConta"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</LinearLayout>