<resources>
    <string name="app_name">mybooks</string>
    <string name="titulo">myBooks</string>
    <string name="sign_up">Criar conta</string>
    <string name="sign_in">Entrar</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="criarCadastro">Criar cadastro</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="cancelar">Cancelar</string>
    <string name="criarConta">Criar conta</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_k">kActivity</string>
    <string name="title_activity_lista_desejo">ListaDesejoActivity</string>
    <string name="listaDesejo">Lista de desejos</string>
    <string name="quantidadeLivros">Você tem 0 livros em sua lista de desejos</string>
    <string name="AdicionarLivro">Adicionar livro</string>
    <string name="adicionarCapa">Adicionar capa</string>
    <string name="tituloLivro">titulo</string>
    <string name="autor">Autor</string>
    <string name="edicao">Edição</string>
    <string name="editora">Editora</string>
    <string name="indicacao">Indicação</string>
    <string name="preco">Preço</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="biblioteca">Minha Biblioteca</string>
    <string name="quantidadeLivrosBiblioteca">Você tem 0 livros em sua biblioteca</string>
    <string name="lidos">Livros Lidos</string>
    <string name="quantidadeLivrosLidos">Você leu 0 livros</string>
    <string name="voltar">Voltar</string>
    <string name="excluirLivro">Excluir livro</string>
    <string name="AdicionarBiblioteca">Adicionar a biblioteca</string>
    <string name="editarLivro">Editar livro</string>
    <string name="Excluir">Você quer mesmo excluir esse livro?</string>
    <string name="ExcluirBotao">Excluir</string>
</resources>
