...
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_novaConta"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:textColor="@color/detalheLaranja"
            android:background="@drawable/botao_branco"/>

...
