<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroLivroActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/AdicionarLivro"
        android:textColor="@color/textoEscuro"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="21dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_livro_cadastro"
            android:layout_width="100dp"
            android:layout_height="143dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="37dp"
            android:background="@color/cardview_dark_background"/>

        <Button
            android:id="@+id/btn_adicionar_capa"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:text="@string/adicionarCapa"
            android:textColor="@color/detalheLaranja"
            android:background="@drawable/botao_branco"
            android:layout_marginTop="118dp"
            android:layout_marginLeft="77dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/txt_titulo"
        android:layout_width="311dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/tituloLivro"
        android:layout_marginLeft="38dp"
        android:textColorHint="@color/textoHint"
        android:textColor="@color/detalheLaranja"
        android:padding="12dp"
        android:inputType="text"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:id="@+id/txt_autor"
        android:layout_width="311dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/autor"
        android:layout_marginLeft="38dp"
        android:textColorHint="@color/textoHint"
        android:textColor="@color/detalheLaranja"
        android:padding="12dp"
        android:inputType="text"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:id="@+id/txt_edicao"
        android:layout_width="311dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/edicao"
        android:layout_marginLeft="38dp"
        android:textColorHint="@color/textoHint"
        android:textColor="@color/detalheLaranja"
        android:padding="12dp"
        android:inputType="text"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:id="@+id/txt_editora"
        android:layout_width="311dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/editora"
        android:layout_marginLeft="38dp"
        android:textColorHint="@color/textoHint"
        android:textColor="@color/detalheLaranja"
        android:padding="12dp"
        android:inputType="text"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:id="@+id/txt_indicacao"
        android:layout_width="311dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/indicacao"
        android:layout_marginLeft="38dp"
        android:textColorHint="@color/textoHint"
        android:textColor="@color/detalheLaranja"
        android:padding="12dp"
        android:inputType="text"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:id="@+id/txt_preco"
        android:layout_width="311dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/preco"
        android:layout_marginLeft="38dp"
        android:textColorHint="@color/textoHint"
        android:textColor="@color/detalheLaranja"
        android:padding="12dp"
        android:inputType="text"
        android:background="@drawable/edit_text_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_cancelarLivro"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:text="@string/cancelar"
            android:textColor="@color/detalheLaranja"
            android:background="@drawable/botao_branco"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_adicionarLivro"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="36dp"
            android:background="@drawable/botao_laranja"
            android:text="@string/AdicionarLivro"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>