<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaDesejosActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right|end"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="70dp"
        android:tint="#ffff"
        app:backgroundTint="#FF5722"
        app:srcCompat="@android:drawable/ic_input_add"
        android:layout_marginRight="30dp" />
</android.support.design.widget.CoordinatorLayout>